...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- TITLE -->
                <TextView
                    android:id="@+id/txt_chat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chats"
                    android:textColor="#555555"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <!-- SUBTITLE -->
                <TextView
...
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="16dp" />

                <!-- SEARCH -->
                <EditText
                    android:id="@+id/edt_search_chats"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_input"
                    android:hint="Search chats"
                    android:paddingStart="16dp"
...
                        android:paddingEnd="22dp"
                        android:text="All"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/chip_direct"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/bg_chip_unselected"
                        android:gravity="center"
                        android:paddingStart="22dp"
                        android:paddingEnd="22dp"
                        android:text="Direct"
                        android:textColor="#555555"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/chip_groups"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/bg_chip_unselected"
                        android:gravity="center"
                        android:paddingStart="22dp"
...
